# rtd-dash

./: LICENSE  README.md  data.json  next.config.js  package-lock.json  package.json  pyproject.toml
datagen/: config.py  generate.py
datagen/gtfs/: archive.py  loader.py  models.py  network.py  service_levels.py  trips.py  util.py
datagen/gtfs/.data/20190428/: service_levels.json
datagen/gtfs/.data/20190724/: service_levels.json
datagen/gtfs/.data/20191228/: service_levels.json
datagen/gtfs/.data/20200429/: service_levels.json
datagen/gtfs/.data/20201230/: service_levels.json
datagen/gtfs/.data/20210428/: service_levels.json
datagen/gtfs/.data/20210731/: service_levels.json
datagen/gtfs/.data/20211229/: service_levels.json
datagen/gtfs/.data/20220430/: service_levels.json
datagen/gtfs/.data/20220730/: service_levels.json
datagen/gtfs/.data/20221231/: service_levels.json
datagen/gtfs/.data/20230429/: service_levels.json
datagen/gtfs/.data/20230603/: service_levels.json
datagen/gtfs/.data/20230701/: service_levels.json
datagen/ridership/: process.py  source.py  timeseries.py
datagen/rtd/: download.py  rtd_gtfs.json
datagen/rtd/ridership/: convert.py  download.py
datagen/rtd/ridership/.data/: ridership.json
docs/: 404.html  CNAME  index.html
src/: types.ts
src/components/: index.ts
src/components/LineCard/: LineCard.tsx  ServiceRidershipChart.tsx  TphChart.tsx  colors.ts
src/components/LineGrid/: LineGrid.module.scss  LineGrid.tsx  sorting.ts
src/pages/: index.tsx
src/styles/: base.scss
(+27 files in other folders)
