[tool.poetry]
name = "rtd-dash"
version = "0.1.0"
description = "Tracking changes in RTD service levels and ridership"
authors = ["Greater Denver Transit"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.9"
boxsdk = "3.7.2"
numpy = "1.24.3"
openpyxl = "3.1.2"
pandas = "1.5.3"
pytz = "2023.3"
requests = "2.31.0"
tqdm = "4.65.0"

[tool.poetry.dev-dependencies]
black = "23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
